# miniresizer

./: .autotools  .cproject  .gitignore  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  CREDITS.txt  NEWS  README  README.md  build-appimage.sh  configure.ac  miniresizer.fld  miniresizer_core.cpp  miniresizer_core.hpp  version.h  win32-toolchain.cmake.template
.github/workflows/: appimage.yaml
nbproject/: configurations.xml  project.xml
src/: .clang-tidy  AboutWindow.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Controller.cpp  Controller.hpp  Fl_Value_Output_3Digit.hpp  Makefile.am  PreviewWindow.cpp  PreviewWindow.hpp  RGBFrameReader.cpp  RGBFrameReader.hpp  ResizeWindow.cpp  ResizeWindow.hpp  about.fld  config.h.in  main.cpp  miniresizer.fld  miniresizer_core.cpp  miniresizer_core.hpp  preview.fld  resize.fld  winres.rc
src/cmake_modules/: BuildType.cmake  FFMPEGCallAVRegisterAll.cmake  FFMPEGNewAVCodecAPI.cmake  FindFFMPEG.cmake  Options.cmake  find_helpers.cmake
src/res/desktop/: miniresizer.desktop
src/res/icons/: app-icon.xpm
src/res/win/: winres.rc
